--- a/src/lab1_1/CMakeLists.txt
+++ b/src/lab1_1/CMakeLists.txt
@@ -28,6 +28,7 @@ ament_python_install_package(${PROJECT_NAME})
 # Install Python executables
 install(PROGRAMS
   scripts/dummy_script.py
+  scripts/bicycle_model.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
@@ -48,9 +49,11 @@ install(TARGETS
 ################ INSTALL LAUNCH, ETC #################
 install(DIRECTORY
   # add directories here
+  models
   meshes
   worlds
   launch
+  scripts
   DESTINATION share/${PROJECT_NAME})
 
 ament_package()
