--- a/src/lab1_1/config/controller.yaml
+++ b/src/lab1_1/config/controller.yaml
@@ -1,6 +1,6 @@
 controller_manager:
   ros__parameters:
-    update_rate: 100  # Hz
+    update_rate: 50 # Hz
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
@@ -18,6 +18,8 @@ velocity_controllers:
       - rotation_joint_front_right
       - joint_wheel_rear_left
       - joint_wheel_rear_right
+      - steering_joint_front_left
+      - steering_joint_front_right
     command_interface: 
       - velocity
     state_interface: 
@@ -41,16 +43,14 @@ joint_trajectory_position_controller:
     state_interfaces:
       - position
       - velocity
-    state_publish_rate: 50.0 # Defaults to 50
-    action_monitor_rate: 20.0 # Defaults to 20
-    allow_partial_joints_goal: false # Defaults to false
+    state_publish_rate: 50.0
+    action_monitor_rate: 20.0
+    allow_partial_joints_goal: false
     open_loop_control: true
-    allow_integration_in_goal_trajectories: true
     constraints:
-      stopped_velocity_tolerance: 0.01 # Defaults to 0.01
-      goal_time: 0.0 # Defaults to 0.0 (start immediately)
+      stopped_velocity_tolerance: 0.01
+      goal_time: 0.0
 
-# Steering joint controllers (position)
 steering_controller:
   ros__parameters:
     joints:
@@ -62,7 +62,6 @@ steering_controller:
       - position
       - velocity
 
-# Wheel joint controllers (velocity)
 wheel_controller:
   ros__parameters:
     joints:
@@ -70,6 +69,8 @@ wheel_controller:
       - rotation_joint_front_right
       - joint_wheel_rear_left
       - joint_wheel_rear_right
+      - steering_joint_front_left
+      - steering_joint_front_right
     command_interface: 
       - velocity
     state_interface:
