--- a/src/lab1_1/.vscode/settings.json
+++ b/src/lab1_1/.vscode/settings.json
@@ -50,5 +50,6 @@
         "/home/phet/install/examples_rclpy_executors/lib/python3.10/site-packages",
         "/opt/ros/humble/lib/python3.10/site-packages",
         "/opt/ros/humble/local/lib/python3.10/dist-packages"
-    ]
+    ],
+    "ros.distro": "humble"
 }
